--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Политика конфиденциальности - Прыгвин</title>
+    <title>Политика конфиденциальности - Прыгвин / Privacy Policy - Prygwin</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
@@ -21,22 +21,23 @@
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
-        h1 {
+        h1, h2 {
             color: #111;
-            font-size: 24px;
             border-bottom: 2px solid #eee;
             padding-bottom: 10px;
         }
-        h2 {
-            color: #222;
-            font-size: 20px;
-            margin-top: 30px;
+        h1 { font-size: 24px; }
+        h2 { font-size: 20px; margin-top: 30px; }
+        p { font-size: 16px; }
+        strong { color: #000; }
+        hr {
+            border: none;
+            border-top: 2px solid #eee;
+            margin: 40px 0;
         }
-        p {
-            font-size: 16px;
-        }
-        strong {
-            color: #000;
+        .lang-switch {
+            text-align: center;
+            margin-bottom: 20px;
         }
         .footer {
             margin-top: 40px;
@@ -48,31 +49,42 @@
 </head>
 <body>
     <div class="container">
-        <h1>Политика конфиденциальности для игры "Прыгвин"</h1>
-        <p><strong>Дата вступления в силу:</strong> 22 июня 2025 г.</p>
+        <div class="lang-switch">
+            <a href="#ru">Русский</a> | <a href="#en">English</a>
+        </div>
+
+        <div id="ru">
+            <h1>Политика конфиденциальности для игры "Прыгвин"</h1>
+            <p><strong>Дата вступления в силу:</strong> 22 июня 2025 г.</p>
+            <p>Мы, Dmitrii Trifonov (DukeByte), создали игру "Прыгвин" как полностью автономное (офлайн) приложение, с уважением относясь к вашей конфиденциальности.</p>
+            <h2>1. Сбор и использование данных</h2>
+            <p>Игра «Прыгвин» <strong>не собирает, не хранит, не использует и не передает третьим лицам</strong> никакие личные или конфиденциальные данные пользователей.</p>
+            <h2>2. Игровой прогресс</h2>
+            <p>Все данные о вашем игровом прогрессе (например, рекорды и набранные очки) хранятся <strong>исключительно локально на вашем устройстве</strong>.</p>
+            <h2>3. Интернет-соединение и Разрешения</h2>
+            <p>Игра не требует подключения к интернету для своей работы и не запрашивает никаких разрешений для доступа к вашему устройству.</p>
+            <h2>4. Свяжитесь с нами</h2>
+            <p>Если у вас есть какие-либо вопросы, вы можете связаться с нами по почте: <strong>pressdukebyte@gmail.com</strong></p>
+        </div>
+
+        <hr>
+
+        <div id="en">
+            <h1>Privacy Policy for "Prygwin"</h1>
+            <p><strong>Effective Date:</strong> June 22, 2025</p>
+            <p>We, Dmitrii Trifonov (DukeByte), have created the game "Prygwin" as a fully autonomous (offline) application with respect for your privacy.</p>
+            <h2>1. Data Collection and Use</h2>
+            <p>"Prygwin" <strong>does not collect, store, use, or share</strong> any personal or confidential user data with third parties.</p>
+            <h2>2. Game Progress</h2>
+            <p>All data about your game progress (such as records and scores) is stored <strong>exclusively locally on your device</strong>.</p>
+            <h2>3. Internet Connection and Permissions</h2>
+            <p>The game does not require an internet connection to function and does not request any permissions to access your device.</p>
+            <h2>4. Contact Us</h2>
+            <p>If you have any questions about this Privacy Policy, you can contact us via email: <strong>pressdukebyte@gmail.com</strong></p>
+        </div>
         
-        <p>Мы, Dmitrii Trifonov (DukeByte), создали игру "Прыгвин" как полностью автономное (офлайн) приложение, с уважением относясь к вашей конфиденциальности.</p>
-
-        <h2>1. Сбор и использование данных</h2>
-        <p>Игра «Прыгвин» <strong>не собирает, не хранит, не использует и не передает третьим лицам</strong> никакие личные или конфиденциальные данные пользователей.</p>
-
-        <h2>2. Игровой прогресс</h2>
-        <p>Все данные о вашем игровом прогрессе (например, рекорды и набранные очки) хранятся <strong>исключительно локально на вашем устройстве</strong>. Эти данные не передаются с устройства и будут удалены при удалении приложения.</p>
-
-        <h2>3. Интернет-соединение</h2>
-        <p>Игра не требует подключения к интернету для своей работы.</p>
-
-        <h2>4. Разрешения</h2>
-        <p>Игра не запрашивает никаких разрешений для доступа к функциям вашего устройства или вашим данным.</p>
-
-        <h2>5. Изменения в Политике конфиденциальности</h2>
-        <p>Мы можем обновлять нашу Политику конфиденциальности время от времени. Мы сообщим вам о любых изменениях, опубликовав новую Политику конфиденциальности на этой странице.</p>
-
-        <h2>6. Свяжитесь с нами</h2>
-        <p>Если у вас есть какие-либо вопросы по поводу этой Политики конфиденциальности, вы можете связаться с нами по электронной почте: <strong>pressdukebyte@gmail.com</strong></p>
-
         <div class="footer">
-            <p>&copy; 2025 DukeByte. Все права защищены.</p>
+            <p>&copy; 2025 DukeByte. All rights reserved.</p>
         </div>
     </div>
 </body>
