--- a/index.html
+++ b/index.html
@@ -56,14 +56,26 @@
         <div id="ru">
             <h1>Политика конфиденциальности для игры "Прыгвин"</h1>
             <p><strong>Дата вступления в силу:</strong> 22 июня 2025 г.</p>
-            <p>Мы, Dmitrii Trifonov (DukeByte), создали игру "Прыгвин" как полностью автономное (офлайн) приложение, с уважением относясь к вашей конфиденциальности.</p>
+            <p>Мы, Dmitrii Trifonov (DukeByte), создали игру "Прыгвин" с уважением к вашей конфиденциальности.</p>
+
             <h2>1. Сбор и использование данных</h2>
-            <p>Игра «Прыгвин» <strong>не собирает, не хранит, не использует и не передает третьим лицам</strong> никакие личные или конфиденциальные данные пользователей.</p>
+            <p>Игра «Прыгвин» <strong>не собирает, не хранит и не передает</strong> личные или конфиденциальные данные пользователей.</p>
+            <p>Единственное исключение связано с использованием встроенных <strong>внутриигровых покупок</strong>. Все операции совершаются через официальные сервисы магазинов приложений (<em>Google Play / App Store</em>) и регулируются их политиками конфиденциальности. Мы не имеем доступа к вашим платёжным данным.</p>
+
             <h2>2. Игровой прогресс</h2>
-            <p>Все данные о вашем игровом прогрессе (например, рекорды и набранные очки) хранятся <strong>исключительно локально на вашем устройстве</strong>.</p>
+            <p>Все данные о вашем игровом прогрессе (например, рекорды и набранные очки) хранятся <strong>исключительно локально на вашем устройстве</strong>. Мы не используем серверное хранение и не передаем информацию третьим лицам.</p>
+
             <h2>3. Интернет-соединение и Разрешения</h2>
-            <p>Игра не требует подключения к интернету для своей работы и не запрашивает никаких разрешений для доступа к вашему устройству.</p>
-            <h2>4. Свяжитесь с нами</h2>
+            <ul>
+                <li>Игра работает <strong>офлайн</strong> и не требует интернет-соединения для геймплея.</li>
+                <li>Интернет необходим <strong>только в момент совершения покупок</strong> за реальные деньги через Google Play / App Store.</li>
+                <li>Игра не запрашивает доступ к вашим личным данным, файлам, контактам или другим функциям устройства.</li>
+            </ul>
+
+            <h2>4. Реклама</h2>
+            <p>В игре <strong>нет рекламы</strong>.</p>
+
+            <h2>5. Свяжитесь с нами</h2>
             <p>Если у вас есть какие-либо вопросы, вы можете связаться с нами по почте: <strong>pressdukebyte@gmail.com</strong></p>
         </div>
 
@@ -72,14 +84,26 @@
         <div id="en">
             <h1>Privacy Policy for "Prygwin"</h1>
             <p><strong>Effective Date:</strong> June 22, 2025</p>
-            <p>We, Dmitrii Trifonov (DukeByte), have created the game "Prygwin" as a fully autonomous (offline) application with respect for your privacy.</p>
+            <p>We, Dmitrii Trifonov (DukeByte), created the game "Prygwin" with respect for your privacy.</p>
+
             <h2>1. Data Collection and Use</h2>
-            <p>"Prygwin" <strong>does not collect, store, use, or share</strong> any personal or confidential user data with third parties.</p>
+            <p>"Prygwin" <strong>does not collect, store, or share</strong> personal or confidential user data with third parties.</p>
+            <p>The only exception is related to <strong>in-app purchases</strong>. All transactions are processed through the official app store services (<em>Google Play / App Store</em>) and are subject to their privacy policies. We do not have access to your payment information.</p>
+
             <h2>2. Game Progress</h2>
-            <p>All data about your game progress (such as records and scores) is stored <strong>exclusively locally on your device</strong>.</p>
+            <p>All data about your game progress (such as records and scores) is stored <strong>exclusively locally on your device</strong>. We do not use server-side storage and do not transfer data to third parties.</p>
+
             <h2>3. Internet Connection and Permissions</h2>
-            <p>The game does not require an internet connection to function and does not request any permissions to access your device.</p>
-            <h2>4. Contact Us</h2>
+            <ul>
+                <li>The game works fully <strong>offline</strong> and does not require an internet connection for gameplay.</li>
+                <li>Internet access is required <strong>only when making purchases</strong> with real money via Google Play / App Store.</li>
+                <li>The game does not request access to your personal data, contacts, files, or other device functions.</li>
+            </ul>
+
+            <h2>4. Advertising</h2>
+            <p>The game contains <strong>no ads</strong>.</p>
+
+            <h2>5. Contact Us</h2>
             <p>If you have any questions about this Privacy Policy, you can contact us via email: <strong>pressdukebyte@gmail.com</strong></p>
         </div>
         
