--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <p>В игре <strong>нет рекламы</strong>.</p>
 
             <h2>5. Свяжитесь с нами</h2>
-            <p>Если у вас есть какие-либо вопросы, вы можете связаться с нами по почте: <strong>pressdukebyte@gmail.com</strong></p>
+            <p>Если у вас есть какие-либо вопросы, вы можете связаться с нами по почте: <strong>Dmitriydclife@gmail.com</strong></p>
         </div>
 
         <hr>
@@ -104,7 +104,7 @@
             <p>The game contains <strong>no ads</strong>.</p>
 
             <h2>5. Contact Us</h2>
-            <p>If you have any questions about this Privacy Policy, you can contact us via email: <strong>pressdukebyte@gmail.com</strong></p>
+            <p>If you have any questions about this Privacy Policy, you can contact us via email: <strong>Dmitriydclife@gmail.com</strong></p>
         </div>
         
         <div class="footer">
